src/mobius.esc/escjava/tags/escjava-2-0a8/ESCTools/Escjava/test/escjava/test/test40/Inherit.java
class A {
    void put(/*@non_null*/ String x) { }
}

class B extends A { }

class C extends B {

    void put(String y) {
	//@ assert y != null

	y = null;				// error
    }
}
